<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jasic.filip.chatapplication.Main2Activity">

    <EditText
        android:id="@+id/register_username"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/register_password"
        android:layout_alignParentStart="true"
        android:hint="@string/username"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="57dp" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/johndoe"
        android:layout_alignParentStart="true"
        android:hint="@string/password"
        android:inputType="textPassword"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="103dp" />

    <EditText
        android:id="@+id/first_name"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/last_name"
        android:layout_alignParentStart="true"
        android:hint="@string/first_name"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="168dp" />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/birth_date"
        android:layout_alignParentStart="true"
        android:hint="@string/last_name"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="214dp" />

    <EditText
        android:id="@+id/johndoe"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/first_name"
        android:layout_alignParentStart="true"
        android:hint="@string/johndoe"
        android:inputType="textEmailAddress"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="289dp" />

    <TextView
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/first_name"
        android:layout_alignBottom="@+id/first_name"
        android:layout_toStartOf="@+id/gender_spinner"
        android:text="@string/gender"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="236dp"
        tools:layout_editor_absoluteY="103dp" />

    <Spinner
        android:id="@+id/gender_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/gender"
        android:layout_marginEnd="43dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="279dp"
        tools:layout_editor_absoluteY="98dp" />

    <CheckBox
        android:id="@+id/accept_notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/register_page_register_btn"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="25dp"
        android:checked="true"
        android:text="@string/accept_notifications"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="367dp" />

    <TextView
        android:id="@+id/birth_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/accept_notifications"
        android:layout_marginBottom="85dp"
        android:layout_marginEnd="19dp"
        android:layout_toStartOf="@+id/register_page_register_btn"
        android:hint="@string/birth_date"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="260dp" />


    <Button
        android:id="@+id/register_page_register_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="45dp"
        android:text="@string/register"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="414dp" />


</RelativeLayout>
