<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jasic.filip.chatapplication.MainActivity"
    >


    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/register_button"
        android:layout_alignBottom="@+id/register_button"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="46dp"
        android:text="@string/login"
        tools:ignore="RelativeOverlap" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="53dp"
        android:layout_marginStart="40dp"
        android:text="@string/register" />

    <EditText
        android:id="@+id/username_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/password_text"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/password_text"
        android:layout_marginTop="33dp"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/login_button"
        android:layout_alignStart="@+id/register_button"
        android:layout_below="@+id/username_text"
        android:layout_marginTop="98dp"
        android:inputType="textPassword"
        android:hint="@string/password"/>



</RelativeLayout>
